--- a/content/payments/billpay/api-integration/paying_bills.mdx
+++ b/content/payments/billpay/api-integration/paying_bills.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Paying Bills
 page_title: BBPS Bill Payment Integration Guide
-order: 5
+order: 4
 visible_in_sidebar: true
 ---
 
@@ -19,27 +19,28 @@ visible_in_sidebar: true
   For complete migration details → <a href="/payments/billpay/api-integration/v2-migration">V2 Migration Guide</a>
 </Callout>
 
-## Understanding Bill Payment Models
+## 1. Understanding Bill Payment Models
+
+### 1.1 The Three Bill Payment Models
 
 BBPS network supports three different payment models. Each biller determines which model they support:
 
 **Flow 1: Bill Fetch → Payment**
 - Retrieve the current amount due for the bill, then allow the customer to pay the bill
 - Common with: Electricity, Gas, Credit cards, Loan repayments
-- **[Jump to Flow 1 →](#flow-1-bill-fetch--payment)**
+- **[Jump to Flow 1 →](#3-flow-1-bill-fetch--payment)**
 
-**Flow 2: Bill Validation → Payment** 
+**Flow 2: Bill Validation → Payment**
 - Validate customer's account exists with the biller, then allow them to pay the bill
 - Common with: Broadband postpaid, Mobile postpaid, DTH/Cable TV, NCMC Recharge
-- **[Jump to Flow 2 →](#flow-2-bill-validation--payment)**
+- **[Jump to Flow 2 →](#4-flow-2-bill-validation--payment)**
 
 **Flow 3: Direct Payment**
 - Customer can pay any amount they want, without requiring prior bill fetch or validation
 - Common with: Donations
-- **[Jump to Flow 3 →](#flow-3-direct-payment)**
+- **[Jump to Flow 3 →](#5-direct-bill-payments)**
 
-
-### Determining Which Flow to Implement
+### 1.2 Determining Which Models to Implement
 
 **Get biller metadata from the  <a href="/payments/billpay/api-reference#/category~List/operation~BillerList">List Billers API</a>** to determine which flow to implement:
 
@@ -50,11 +51,9 @@ Check `biller.fetchApiType` field:
   - `BILL_DIRECT` → Implement the Direct Payment flow
 
 
-## Basic Requirements
+## 2. Requirements Common to All Flows
 
 Use this as a quick checklist and minimal request skeleton. These are the minimum requirements common across all flows.
-
-For behavior and rules (amount exactness, CCF, idempotency), see Cross‑Flow Rules & Patterns below.
 
 **Required Headers:**
 <CodeBlockWithCopy language="http">{`
@@ -64,7 +63,8 @@ Content-Type: application/json
 `}</CodeBlockWithCopy>
 
 
-**Basic Payment Structure:**
+### 2.1 Basic Payment Structure
+
 <CodeBlockWithCopy language="json">{`
 {
   "paymentDetails": {
@@ -85,65 +85,41 @@ Content-Type: application/json
 `}</CodeBlockWithCopy>
 
 
-## Cross-Flow Rules & Patterns
+### 2.2 Why You Need Remitter Details
 
-<a id="common-patterns" />
+Every bill payment through BBPS needs to identify who's making the payment and how they're paying. This is required for regulatory traceability, dispute resolution, and compliance with NPCI guidelines.
 
-### Amounts & Exactness
+The "remitter" is the person actually making the payment, which might be different from the account holder. For example, when someone pays their parent's electricity bill or when a company pays employee reimbursements. You'll need to include the remitter's name in every payment request, along with details about their payment instrument.
 
-- All amounts are in paise.
+Different payment methods require specific formatting—UPI needs a Virtual Payment Address, cards need numbers and authorization codes, bank transfers need IFSC and account numbers. The specialized guide covers all these NPCI-compatible formats and when to use each one.
 
-### Remitter Details
+📖 **Complete NPCI formats and examples → <a href="/payments/billpay/api-integration/remittance_flows_guide" target="_blank">Remitter Details Guide</a>**
 
-- All bill payment requests require you to include <code>remitter.name</code> and <code>paymentDetails.accountInfo</code> for traceability.
-- You can find NPCI-compatible formats and examples in the <a href="/payments/billpay/api-integration/remittance_flows_guide" target="_blank">Remitter Details Guide</a>
+### 2.3 When Billers Charge Additional Fees
 
-### Customer Convenience Fee (CCF)
+Some billers charge a Customer Convenience Fee (CCF) on top of the bill amount—an additional cost your users pay for the convenience of digital payment. You'll discover this when checking biller metadata from the List Billers API and finding CCF entries in the `interchangeFee` array.
 
-<a id="ccf-rules" />
+Most billers have zero CCF, but when it applies, you'll need to calculate the fee separately and include it in your payment request as `custConvFee`. The total amount debited from your user will be the bill amount plus the CCF.
 
-- Detect: In List Billers, use <code>biller.interchangeFee[]</code> entries with <code>feeCode = "CCF1"</code> and <code>feeDirection = "C2B"</code>.
-- If absent: Omit <code>paymentDetails.custConvFee</code>.
-- Compute in paise: <code>ccf = (flatFee + (billAmount`*`percentFee/100))`*`(1 + GST/100)</code>. 
-- Send: Put only the final value in <code>paymentDetails.custConvFee</code>. Do not add CCF to <code>paymentDetails.amount</code>.
-- Ignore: EBF/PBF (B2C) are not customer fees and must not be computed or sent by clients.
-- Total to debit/refund: <code>paymentDetails.amount + paymentDetails.custConvFee</code>.
+📖 **Complete CCF implementation → <a href="/payments/billpay/api-integration/customer-convenience-fee" target="_blank">Customer Convenience Fee Guide</a>**
 
-### Idempotency and Retry Logic
+---
 
-**Basic Idempotency:**
-- Always generate unique <code>paymentDetails.paymentRefId</code> per debit attempt
-- Reuse same key when retrying the same debit
+These universal requirements form the foundation of every bill payment request, regardless of which flow you implement. Now you're ready to choose your specific flow based on the biller's `fetchApiType`—each flow builds on these universal requirements while adding its own steps for fetching bills, validating accounts, or processing direct payments.
 
-**Payment Retry Logic:**
+## 3. The Bill Fetch → Payment Flow
 
-When a payment fails after funds are debited, you cannot retry with the same `refId`. Here's the correct retry flow:
-1. Initiate a new bill fetch/validation request to get a fresh `refId`
-2. Use the same `paymentRefId` (your debit identifier) in the new bill payment request <strong>within 24 hours</strong> of the original bill payment request.
-This allows proper retry while maintaining payment traceability
+<a id="3-flow-1-bill-fetch--payment" />
 
-**Example retry sequence:**
-```
-Original: Fetch → refId: ABC123 → Payment (paymentRefId: PAY456) → Fails
-Retry:    Fetch → refId: XYZ789 → Payment (paymentRefId: PAY456) → Success
-```
-
-<Callout type="tip">
-  <strong>Important:</strong> Idempotency logic applies for 24 hours after the initial payment request. Plan your retry mechanism accordingly.
-</Callout>
-
-
-## Flow 1: Bill Fetch → Payment
-
-<a id="flow-1-bill-fetch--payment" />
-
-Use when customers want to see their current amount due before paying. Majority of the billers on the network use this model.
+This flow uses all the universal requirements from Section 2, plus the specific fetch-and-pay steps below. Use this when customers want to see their current amount due before paying—the majority of billers on the network use this model.
 
 **Implementation Steps:**
 1. Fetch Bill Details → <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest" target="_blank">Initiate bill fetch</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-fetch-webhook" target="_blank">accept webhook</a>)
 2. Initiate Payment → <a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest" target="_blank">Initiate bill payment</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">accept webhook</a>)
 
-### Step 1: Fetch Bill Details
+### 3.1 Basic Fetch & Pay Requests
+
+**Step 1: Fetch Bill Details**
 
 **Bill Fetch Request:**
 <CodeBlockWithCopy language="json">{`
@@ -187,7 +163,7 @@ Use when customers want to see their current amount due before paying. Majority 
 }
 `}</CodeBlockWithCopy>
 
-### Step 2: Initiate Bill Payment for the fetched bill
+**Step 2: Initiate Bill Payment for the fetched bill**
 
 Call `/api/v{1|2}/bbps/bills/payment/request` with:
 
@@ -217,102 +193,28 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 - Validate that the paymentDetails.amount is a multiple of `amountMultiple` if present
 
 
-### Paying for a specific option
+### 3.2 When Bills Offer Multiple Payment Amounts
 
-Some billers (eg: Loan repayments) offer multiple payment amounts for a single bill.
+After your fetch completes, check if your response includes a `paymentOptions` array within the bill. When billers like loan providers or credit card companies offer flexible payment amounts—such as minimum due, partial payments, or advance payments—they'll expose these as additional choices alongside the base bill amount.
 
-**Sample Bill Fetch Response with Payment Options:**
-<CodeBlockWithCopy language="json">{`
-{
-  "data": {
-    "refId": "FETCH_REF_123",
-    "status": "Success",
-    "bills": [{
-      "amount": 50000,
-      "customerName": "John Doe",
-      "paymentOptions": [
-        { "name": "1 Month EMI", "amount": 15000 },
-        { "name": "3 Month EMI", "amount": 45000 },
-        { "name": "Full Payment", "amount": 50000 }
-      ]
-    }]
-  }
-}
-`}</CodeBlockWithCopy>
+If you see `paymentOptions` in your fetch response, you'll need to handle amount selection and pass the user's choice in your payment request. The complete implementation guide walks through option detection, user interface patterns, time-based defaults for Early/Late payments, and request formatting.
 
-**When your bill fetch response includes `paymentOptions`:**
-- Present these options alongside the base `bill.amount`.
-- Include exactly one selected option in the payment request when paying a non‑base option; `paymentDetails.amount` must match the selected option’s `amount`.
-- Omit `selectedPaymentOptions` when paying the base `bill.amount`.
-- For optional time‑based defaults (Early/Late) and complete selection rules, see the specialized guide below.
+📖 **Complete implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Paying for alternative options</a>**
 
-**Payment Request with Selected Option:**
+### 3.3 When Billers Return Multiple Bills
 
-Call `/api/v{1|2}/bbps/bills/payment/request` with:
+Most billers return a single bill per fetch, but occasionally you'll encounter billers—typically in B2B or government eChallan categories—that return multiple outstanding bills in one response. You'll recognize this scenario when your fetch response contains `billerResponseType: "LIST"` instead of the standard single-bill format.
 
-<CodeBlockWithCopy language="json">{`
-{
-  "refId": "{{BILL_FETCH_REF_ID}}",
-  "paymentDetails": {
-    "amount": {{SELECTED_OPTION_AMOUNT}},
-    "mode": "{{DEBIT_PAYMENT_MODE}}",
-    "custConvFee": {{COMPUTED_CCF_IN_PAISE}},  // Total debit = amount + custConvFee
-    "paymentRefId": "{{DEBIT_ID}}",
-    "timestamp": "{{DEBIT_TIMESTAMP}}",
-    "accountInfo": "{{DEBIT_PAYMENT_INSTRUMENT_INFO}}",
-    "selectedPaymentOptions": [
-      {
-        "name": "{{SELECTED_OPTION_NAME}}",
-        "amount": {{SELECTED_OPTION_AMOUNT}}
-      }
-    ]
-  },
-  "remitter": { 
-    "name": "{{PAYER_NAME}}" 
-  }
-}
-`}</CodeBlockWithCopy>
-
-📖 **Complete payment options implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Paying for alternative options</a>**
-
-### Paying for multiple bills (Optional)
-
-**Note:** A small set of billers (< 1%) support returning multiple bills in a single bill fetch. These billers primarily belong to B2B/eChallan categories.
-
-**Most developers can skip this section.** Only needed for billers returning `billerResponseType: "LIST"`.
-
-**Enhanced Payment Request (when needed):**
-
-Call `/api/v{1|2}/bbps/bills/payment/request` with:
-
-<CodeBlockWithCopy language="json">{`
-{
-  "refId": "{{BILL_FETCH_REF_ID}}",
-  "bills": [ // Required: Subset of bills from the bill fetch response you want to pay for
-    { "billNumber": "B123", "amount": {{B123_AMOUNT_IN_PAISE}} },
-    { "billNumber": "B124", "amount": {{B124_AMOUNT_IN_PAISE}} }
-  ],
-  "paymentDetails": {
-    "amount": {{SUM_OF_SELECTED_BILL_AMOUNTS_IN_PAISE}},  
-    "mode": "{{DEBIT_PAYMENT_MODE}}",
-    "paymentRefId": "{{DEBIT_ID}}",
-    "timestamp": "{{DEBIT_TIMESTAMP}}",
-    "accountInfo": "{{DEBIT_PAYMENT_INSTRUMENT_INFO}}"
-  },
-  "remitter": { 
-    "name": "{{PAYER_NAME}}" 
-  }
-}
-`}</CodeBlockWithCopy>
+When this happens, you'll need to implement bill selection logic and modify your payment request to include the specific bills the user wants to pay. The specialized guide covers bill selection patterns, validation rules, and the enhanced request format needed for multi-bill payments.
 
 📖 **Complete multi-bill implementation → <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a>**
 
 
-## Flow 2: Bill Validation → Payment
+## 4. The Bill Validation → Payment Flow
 
-<a id="flow-2-bill-validation--payment" />
+<a id="4-flow-2-bill-validation--payment" />
 
-Use when you need to validate account existence before payment. Common with services like broadband postpaid, mobile postpaid, DTH/Cable TV.
+This flow also uses all the universal requirements from Section 2, plus validation-specific steps. Use this when you need to validate account existence before payment—common with services like broadband postpaid, mobile postpaid, and DTH/Cable TV.
 
 **Key Differences from the Bill Fetch → Payment model:**
 - Validates customer account exists with biller
@@ -323,7 +225,7 @@ Use when you need to validate account existence before payment. Common with serv
 1. Validate Account → <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest" target="_blank">Initiate bill validation</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-fetch-webhook" target="_blank">accept webhook</a>)
 2. Initiate Payment → <a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest" target="_blank">Initiate bill payment</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">accept webhook</a>)
 
-### Basic Validation → Payment
+### 4.1 Basic Validation → Payment
 
 **Most common use case for this model:** Validate account exists, then allow user to pay any amount.
 
@@ -384,50 +286,21 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 }
 `}</CodeBlockWithCopy>
 
-### Paying for plans
+### 4.2 When Services Require Plan Selection
 
-Some billers require users to choose a plan before payment - like mobile recharge, DTH packages, or broadband subscriptions.
+After your validation succeeds, some service providers—particularly mobile operators, DTH providers, and broadband companies—will require users to select a specific plan or package before payment. You'll encounter this when your validation response returns an empty `bills` array but includes plan information, or when you need to browse available plans for the service.
 
-**Two user experience patterns you'll encounter:**
+Different billers follow different patterns: some expose their full plan catalog upfront, while others return personalized plan options after account validation. Your implementation will need to handle plan selection, user choice, and include the selected plan details in your payment request.
 
-**Pattern 1: Browse Plans First**
-- Show users all available plans offered by the biller upfront (List Plans API)
-- User selects plan → validate account/selected plan details → initiate bill payment
+📖 **Complete plan selection implementation → <a href="/payments/billpay/api-integration/plan-mdm-integration" target="_blank">Paying for plans</a>**
 
-**Pattern 2: Account-Specific Plans**
-- User enters account details in bill validation request
-- Biller returns plans available for this user in bill validation response
-- User selects from personalized options → initiate bill payment with the selected plan
+## 5. Direct Bill Payments
 
-**Initiate Bill Payment with Selected Plan:**
+<a id="5-direct-bill-payments" />
 
-Call `/api/v{1|2}/bbps/bills/payment/request` with:
+### 5.1 Basic Direct Payment
 
-<CodeBlockWithCopy language="json">{`
-{
-  "refId": "{{VALIDATION_RESPONSE_REF_ID}}",
-  "paymentDetails": {
-    "amount": {{PLAN_AMOUNT_IN_PAISE}},
-    "mode": "UPI",
-    "custConvFee": {{COMPUTED_CCF_IN_PAISE}},  // Include if biller charges CCF; Total debit = amount + custConvFee
-    "paymentRefId": "{{UNIQUE_ID}}",
-    "timestamp": "{{ISO_8601}}",
-    "accountInfo": "user@ybl",
-    "Id": "PLAN_123"  // Plan ID from selection
-  },
-  "remitter": { 
-    "name": "{{PAYER_NAME}}" 
-  }
-}
-`}</CodeBlockWithCopy>
-
-📖 **Complete plan selection implementation guide → <a href="/payments/billpay/api-integration/plan-mdm-integration" target="_blank">Paying for plans</a>**
-
-## Flow 3: Direct Payment
-
-<a id="flow-3-direct-payment" />
-
-Use for ad-hoc payments where no prior bill fetch/bill validation is required and the user knows the exact amount.
+This flow combines the universal requirements from Section 2 with customer information in a single request. Use for ad-hoc payments where no prior bill fetch or validation is required and the user knows the exact amount.
 
 **Prerequisites:** Only use when `biller.fetchApiType = "BILL_DIRECT"`.
 
@@ -459,7 +332,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
   "paymentDetails": {
     "amount": {{AMOUNT_IN_PAISE}},
     "mode": "{{PAYMENT_MODE}}",
-    "custConvFee": {{COMPUTED_CCF_IN_PAISE}},  // Include if biller charges CCF; Total debit = amount + custConvFee
+    "custConvFee": {{COMPUTED_CCF_IN_PAISE}},
     "paymentRefId": "{{UNIQUE_IDEMPOTENT_ID}}",
     "timestamp": "{{ISO_8601}}",
     "accountInfo": "{{NPCI_FORMAT}}"
@@ -474,7 +347,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 
 **Implementation Note:** Strip empty `customer.customerParams` (v2 users) or `customer.billParameters` (v1 users) before calling APIs.
 
-## Payment Response Handling
+## 6. Monitoring Bill Payment Status
 
 After initiating a payment across any flow, you'll receive responses that require specific handling:
 
@@ -484,14 +357,14 @@ After initiating a payment across any flow, you'll receive responses that requir
 - `Failure` → Payment failed, check `failureReason`, follow retry logic above if needed
 
 **Polling Guidelines:**
-- Poll every 3-5 seconds for up to 2 minutes for standard billers
-- For billers with `supportsPendingStatus: true`, poll up to 48 hours
-- Always store `transactionId` from successful payments for disputes/reconciliation
+- Poll every 3-5 seconds for up to 180 seconds for standard billers
+- You can stop polling if the payment is in `Success` or `Failure` state
+- Always save `transactionId` from successful payments for disputes/reconciliation
 
-📖 **Complete response format → <a href="/payments/billpay/api-integration/objects#payment-response" target="_blank">Objects Reference</a>**
+📖 **Poll Payment Response API → <a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse" target="_blank">Bill Payment Response API</a>**
 📖 **Webhook alternative → <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">Bill Payment Webhook</a>**
 
-## Reference Links
+## 7. Reference Links
 
 📖 **Essential References:**
 - <a href="/payments/billpay/api-integration/api-reference" target="_blank">Complete API Documentation</a> — Full endpoint specifications
