--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -1,28 +1,28 @@
 ---
 sidebar_title: Passing Remitter Details
 page_title: Passing Remitter Details
-order: 6
+order: 5
 visible_in_sidebar: true
 ---
 
 
 # Remitter & Account Info
 
-## Overview
+## 1. You're Here Because You Need NPCI-Compatible Formatting
 
-This guide is a concise format reference for remitter details and NPCI-compatible account information used in bill payments. Use it alongside the master integration guide.
+Bill payments require remitter details and payment instrument information, and you will need to format them correctly for different payment methods. This guide provides the exact formatting specifications NPCI requires for each payment mode, plus validation rules to ensure your requests are accepted.
 
-📖 **For complete payment integration context and examples → <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a>**
+The key principle: each payment method has its own format requirements, from simple UPI addresses to complex card authorization codes, and getting these wrong will cause payment failures.
 
 
-## Fields Reference
+## 2. Fields Reference
 
 | Property | Type | Constraints | Purpose | Notes |
 |-------|------|-------------|---------|-------|
 | `paymentDetails.accountInfo` | String | Format varies by payment mode | NPCI-compatible instrument info for the debit instrument | Required in payment requests |
 | `remitter` | Object | - | Captures information about the person making the payment | May differ from account holder |
 
-#### Remitter Object Properties
+### 2.1 Remitter Object Properties
 
 | Property | Type | Constraints | Purpose | Notes |
 |----------|------|-------------|---------|-------|
@@ -35,12 +35,12 @@ This guide is a concise format reference for remitter details and NPCI-compatibl
 
 
 
-## Usage Across Flows
+## 3. Usage Across Flows
 
 - Fetch/Validation requests: <code>remitter</code> is optional.
 - Payment requests (Flow 1–3): <code>remitter.name</code> and <code>paymentDetails.accountInfo</code> are required.
 
-### Sample Payment Request
+### 3.1 Sample Payment Request
 
 <CodeBlockWithCopy language="json">{`
 {
@@ -60,9 +60,9 @@ This guide is a concise format reference for remitter details and NPCI-compatibl
 `}</CodeBlockWithCopy>
 
 
-## NPCI Specifications
+## 4. NPCI Specifications
 
-### Account Information Format by Payment Mode
+### 4.1 Account Information Format by Payment Mode
 
 | Payment Mode | Value Example | Length Constraints | NPCI Code | Description |
 |--------------|---------------|-------------------|-----------|-------------|
@@ -73,7 +73,7 @@ This guide is a concise format reference for remitter details and NPCI-compatibl
 | **AEPS, BHIM Aadhaar Pay** | <code>123456789012\|1234567</code> | Min: 3, Max: 50 | Aadhaar\|IIN | Aadhaar number and IIN used for payment |
 | **Cash, USSD** | `<Payment remarks>` | Min: 1, Max: 50 | Remarks | Remarks when payment mode is cash |
 
-### Code Format Examples
+### 4.2 Code Format Examples
 
 The following table provides detailed formatting specifications for different NPCI codes:
 
@@ -87,13 +87,13 @@ The following table provides detailed formatting specifications for different NP
 | **VPA** | Alphanumeric Special<br/>Min Length: 3, Max Length: 50 | `manoj@icici` |
 | **Aadhaar\|IIN** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | <code>123456789012\|1234567</code> |
 
-### Field Handling Rules
+### 4.3 Field Handling Rules
 
-#### Mandatory Behavior
+#### 4.3.1 Mandatory Behavior
 - In payment requests across Flow 1–3, `remitter.name` and `paymentDetails.accountInfo` are required
 - The `paymentDetails.accountInfo` field must contain NPCI-compatible values corresponding to the selected payment mode
 
-#### Optional Field Handling
+#### 4.3.2 Optional Field Handling
 - `remitter.email`, `remitter.pan`, and `remitter.aadhaar` are optional and can be omitted if not available
 - Including `remitter` in bill fetch/validation requests is optional
 - System automatically handles fallback scenarios for missing optional data
