slightly less gimmicky

--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -8,7 +8,7 @@ visible_in_sidebar: true
 
 # Remitter & Account Info
 
-## 1. You're Here Because You Need NPCI-Compatible Formatting
+## 1. NPCI Requirements for Remitter Details and Account Info for all Bill Payments
 
 Bill payments require remitter details and payment instrument information, and you will need to format them correctly for different payment methods. This guide provides the exact formatting specifications NPCI requires for each payment mode, plus validation rules to ensure your requests are accepted.
 
