--- a/content/payments/billpay/api-integration/customer-convenience-fee.mdx
+++ b/content/payments/billpay/api-integration/customer-convenience-fee.mdx
@@ -1,7 +1,7 @@
 ---
-sidebar_title: Customer Convenience Fee (CCF)
+sidebar_title: Passing CCF
 page_title: Customer Convenience Fee (CCF) Integration Guide
-order: 7
+order: 6
 visible_in_sidebar: true
 ---
 
