--- a/content/payments/billpay/api-integration/bill-payment-options.mdx
+++ b/content/payments/billpay/api-integration/bill-payment-options.mdx
@@ -1,7 +1,7 @@
 ---
-sidebar_title: Paying for alternative options
+sidebar_title: Paying for options
 page_title: Paying for alternative options
-order: 6
+order: 7
 visible_in_sidebar: true
 ---
 
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 ## 1. Some Billers Allow Users to Pay Alternative Amounts for the Same Bill
 
-You successfully completed a Flow 1 bill fetch and discovered your response includes a `paymentOptions` array alongside the standard bill amount. This happens when billers—typically credit cards, loan providers, or utilities—offer customers multiple payment amounts instead of just the fixed bill amount.
+Some bill fetch responses includes a `paymentOptions` array alongside the standard bill amount. This happens when billers—typically credit cards, loan providers, or utilities—offer customers multiple payment amounts instead of just the fixed bill amount.
 
 Here's what your fetch response looks like when this happens:
 
