add onboarding feedback

--- a/content/payments/billpay/api-integration/customer-convenience-fee.mdx
+++ b/content/payments/billpay/api-integration/customer-convenience-fee.mdx
@@ -147,7 +147,7 @@ When CCF applies, use this formula to calculate the fee in paise:
 
 **Formula**: `ccf = (flatFee + (billAmount × percentFee/100)) × (1 + GST/100)`
 
-**Note**: Currently, GST is 18% on CCF in the BBPS network.
+**Note**: Currently, GST is 18% on CCF in the BBPS network. (Might change in future)
 
 ### 5.3 Real Calculation Examples
 
@@ -231,7 +231,7 @@ When using payment options (alternative amounts), calculate CCF on the final sel
 
 - **Detect CCF**: Look for `CCF1` entries with `C2B` direction in biller metadata
 - **Calculate properly**: Use the complete formula including 18% GST
-- **Handle zero CCF**: Omit `custConvFee` field when CCF is zero or rounds to zero
+- **Handle zero CCF**: Omit `custConvFee` field when CCF is zero
 - **Separate from bill amount**: Never add CCF to `paymentDetails.amount`
 - **Calculate on final amount**: For payment options, use selected amount not base amount
 - **Ignore irrelevant fees**: Skip EBF/PBF entries (they're biller fees, not customer fees)
