add onboarding feedback

--- a/content/payments/billpay/api-integration/bill-payment-options.mdx
+++ b/content/payments/billpay/api-integration/bill-payment-options.mdx
@@ -20,6 +20,7 @@ Here's what your fetch response looks like when this happens:
     "bills": [
       {
         "amount": 200000,
+        "billDate": "2024-12-15",
         "dueDate": "2024-12-30",
         "additionalInfo": [
           { "name": "Early Payment Date", "value": "2024-12-20" }
@@ -53,6 +54,8 @@ Payment options appear across many different types of services, each with their 
 {
   "bills": [{
     "amount": 500000,  // ₹5000 total outstanding
+    "billDate": "2024-11-15",
+    "dueDate": "2024-12-15",
     "paymentOptions": [
       { "name": "Minimum Due", "amount": 50000 },      // ₹500
       { "name": "Previous Balance", "amount": 350000 }, // ₹3500
@@ -67,6 +70,8 @@ Payment options appear across many different types of services, each with their 
 {
   "bills": [{
     "amount": 1200000,  // ₹12000 full outstanding
+    "billDate": "2024-12-01",
+    "dueDate": "2024-12-31",
     "paymentOptions": [
       { "name": "1 Month EMI", "amount": 300000 },     // ₹3000
       { "name": "3 Month EMI", "amount": 900000 },     // ₹9000
@@ -81,6 +86,8 @@ Payment options appear across many different types of services, each with their 
 {
   "bills": [{
     "amount": 2500000,  // ₹25000 annual premium
+    "billDate": "2024-11-01",
+    "dueDate": "2024-12-01",
     "paymentOptions": [
       { "name": "Quarterly Premium", "amount": 650000 },   // ₹6500
       { "name": "Late Payment", "amount": 2750000 },       // ₹27500 (with penalty)
